- Credential info don't store in global variables. These are stored in just only cookies or session storage or just http-only cookies.
- jQuery-FileUpload plug-in can upload multiple files. Set IMParts_Catalog.jquery_fileupload.multiFileInPostOnly to true.
  This feature can activate on the post only mode. The sample is Sample_webpage/fileuploadMulti_MySQL.html.
- [INFO] The inter-mediator-plugin-fileupload is deprecated. The inter-mediator-plugin-jqueryfileupload is a replacement.
  We are going to maintain the jqueryfileupload so far and hope it forever.
- [BUG FIX] Fix compatibility with Claris FileMaker Server. The affected version is Ver.7.
- [BUG FIX] IMLibPageNavigation.moveDetailOnceAgain() didn't work fine.
- [BUG FIX] On the navi-control key, confirm-delete works but delete-confirm didn't (also insert).
- [BUG FIX] Fix handling Claris FileMaker's checkbox set feature when using DB_FileMaker_DataAPI class (Thanks to Mr. Masakatsu Inamoto).
- [BUG FIX] The $customLoginPanel variable in the params.php file didn't handle for anything. It removed.
- [BUG FIX] Authentication with session storage didn't expire. Now it follows the value of the 'expired' key.
- [BUG FIX] Fix portal access mode for FileMaker_FX class. The affected version is Ver.7.

Ver.7 (March 20, 2021)
- The synchronizing with clients is back without Pusher.
- The FileMaker_DataAPI class updated for API protocol ver.2. And also introduced the 'portals' key on context definitions.
- CSV File uploading and add records for each line. I'd like to check the 'samples/Sample_webpage/fileuploadCSV_MySQL.html'
  file or the Sample page > JS Components > jQuery FileUploader > CSV file upload with jQuery_File_Upload.
- If setting INTERMediator.alwaysAddOperationExchange to true, the local context criteria combine logical
  expressions with ADN operator.
- The font-weight of the css * target changed from lighter to non description for adjusting the Android.