@@ -81,6 +81,7 @@
             <thead>
             <tr>
                 <th>Date and Time/Path</th>
+                <th>target</th>
                 <th>Upload</th>
                 <th>Picture</th>
                 <th></th>
@@ -91,6 +92,9 @@
                 <td>
                     <div data-im="testtable@dt1"></div>
                     <div data-im="testtable@vc1"></div>
+                </td>
+                <td>
+                    <div data-im="testtable@vc3"></div>
                 </td>
                 <td data-im="testtable@vc1" data-im-widget="jquery_fileupload"></td>
                 <td>
