@@ -761,7 +761,8 @@ class Proxy extends UseSharedObjects implements Proxy_Interface
 
         $this->logger->setDebugMessage("Server side locale: " . setlocale(LC_ALL, "0"), 2);
 
-        if (isset($params['isSAML'])) {
+        if (isset($params['isSAML'])
+            || (isset($options['authentication']) && isset($options['authentication']['is-saml']))) {
             $this->dbSettings->setIsSAML($params['isSAML']);
         }
         if (isset($params['samlAuthSource'])) {
