@@ -24,7 +24,7 @@ interface Auth_Interface_DB					// with using table for authentication/authoriza
     public function authSupportRetrieveHashedPassword($username);					// authuser
     public function authSupportCreateUser($username, $hashedpassword, $isLDAP = false, $ldapPassword = null);	// authuser
     public function authSupportChangePassword($username, $hashednewpassword);		// authuser
-    public function authSupportCheckMediaPrivilege($tableName, $userField, $user, $keyField, $keyValue);	// (any table)
+    public function authSupportCheckMediaPrivilege($tableName, $targeting, $userField, $user, $keyField, $keyValue);	// (any table)
     public function authSupportGetUserIdFromEmail($email);							// authuser
     public function authSupportGetUserIdFromUsername($username);					// authuser
     public function authSupportGetUsernameFromUserId($userid);						// authuser
